<resources>
    <string name="app_name">Animal Hostel</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="emptyEmail">Enter your email</string>
    <string name="emptyName">Enter your name</string>
    <string name="emptySurname">Enter your surname</string>
    <string name="emptyPhone">Enter your phone</string>
    <string name="emptyPassword">Enter your password</string>
    <string name="login">Login</string>
    <string name="registerSuccess">User added success</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="payment">Payment</string>
    <string name="language">Language</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="uk">Ukrainian</string>
    <string name="en">English</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="parrot">Parrot</string>
    <string name="hamster">Hamster</string>
    <string name="turtle">Turtle</string>
    <string name="you_pay">You have to pay:</string>
    <string name="emptyPatment">You havent to pay</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old password</string>
    <string name="sleepHour">Sleep Hour: </string>
    <string name="activeHour">Active Hour: </string>
</resources>